# amazon-eks-autonomous-driving-data-service

./: README.md
a2d2/: Dockerfile-humble-jammy  Dockerfile-melodic-bionic  Dockerfile-noetic-focal
a2d2/build_tools/: build_and_push.sh  set_env.sh
a2d2/catkin_ws/src/a2d2_msgs/msg/: Control.msg
a2d2/charts/a2d2-data-service/: values.yaml
a2d2/charts/a2d2-data-service/templates/: a2d2.yaml
a2d2/charts/a2d2-rosbridge/: Chart.yaml  values.yaml
a2d2/charts/a2d2-rosbridge/templates/: a2d2.yaml
a2d2/config/: a2d2-lidar.rviz  a2d2-noetic.rviz  a2d2.rviz  c-config-ex1.json  c-config-ex2.json  c-config-ex3.json  c-config-ex4.json  c-config-lidar.json  s-config.json
a2d2/config/rosbridge/foxglove/: a2d2-all-lidar.json  a2d2-ex1.json  a2d2-ex2.json  a2d2-ex3.json
a2d2/config/rosbridge/mozart/data_request/: all_lidar_camera.json
a2d2/config/rviz2/: a2d2-lidar.rviz  a2d2.rviz
a2d2/data/: sensors-semantic.csv  vehicle-semantic.csv
a2d2/ddl/: bus_data.ddl  drive_data.ddl
a2d2/notebooks/: a2d2-camera-lidar-json.ipynb
a2d2/notebooks/.ipynb_checkpoints/: a2d2-camera-lidar-json-checkpoint.ipynb
a2d2/src/: a2d2_ros_util.py  bus_dataset.py  data_client.py  data_request.py  data_response.py  data_service.py  db_reader.py  manifest_consumer.py  manifest_dataset.py  manifest_producer.py  ros_data_node.py  ros_util.py  rosbag_consumer.py  rosbag_producer.py  rosbridge_service.py  s3_deleter.py  s3_reader.py  util.py
a2d2/src/common/: bus_dataset.py  db_reader.py  manifest_dataset.py  ros_util.py  s3_deleter.py  s3_directory_reader.py  s3_reader.py  s3_writer.py  util.py
adds/: Dockerfile-humble-jammy  Dockerfile-noetic-focal
adds/build_tools/: build_and_push.sh
adds/catkin_ws/src/fordav_msgs/: CMakeLists.txt  package.xml
adds/catkin_ws/src/fordav_msgs/msg/: Bus.msg
adds/colcon_ws/src/a2d2_msgs/: CMakeLists.txt  package.xml
adds/colcon_ws/src/a2d2_msgs/msg/: Bus.msg
adds/colcon_ws/src/fordav_msgs/: CMakeLists.txt  package.xml
adds/colcon_ws/src/fordav_msgs/msg/: Bus.msg
adds/src/: a2d2_ros_util.py  data_service.py  fordav_ros_util.py  kafka_data_client.py  ros_data_node.py
adds/src/common/: bus_dataset.py  manifest_dataset.py  ros_util.py  s3_directory_reader.py  s3_writer.py  thread_utils.py  util.py  view.py
cfn/: mozart-desktop.yml  mozart.yml
fordav/charts/fordav-data-service/: Chart.yaml  values.yaml
fordav/charts/fordav-data-service/templates/: fordav.yaml
fordav/charts/fordav-rosbridge/: Chart.yaml  values.yaml
fordav/charts/fordav-rosbridge/templates/: fordav.yaml
fordav/config/: c-config-ex1.json  c-config-ex2.json  c-config-ex3.json  c-config-ex4.json  c-config-lidar.json  fordav-lidar.rviz  fordav.rviz
fordav/config/rviz2/: fordav-lidar.rviz  fordav.rviz
fordav/data/: sensors.csv  vehicle.csv
fordav/ddl/: bus_data.ddl  drive_data.ddl  sensor.ddl  vehicle.ddl
fordav/efs/: attach-efs-fordav.yaml  pv-efs-fordav.yaml  pvc-efs-fordav.yaml  stage-data-fordav.yaml
fordav/fsx/: attach-fsx-fordav.yaml  pv-fsx-fordav.yaml  pvc-fsx-fordav.yaml  stage-data-fordav.yaml
fordav/src/: data_client.py
scripts/: Dockerfile-pythonfroms3-noetic  a2d2-etl-steps-skip-raw.sh  a2d2-etl-steps.sh  a2d2-metadata-etl.py  a2d2-semantic-etl-steps.sh  a2d2-semantic-metadata-etl.py  a2d2-setup-dataset.sh  a2d2_extract_load.py  a2d2_extract_tar.py  a2d2_glue_etl_job.py  add-dataset.sh  build-ecr-image.sh  configure-eks-auth.sh  copy-a2d2.sh  create-eks-sa-role.sh  deploy-efs-csi-driver.sh  deploy-fsx-csi-driver.sh  desktop-melodic-bionic.sh  eks-cluster-autoscaler.sh  fordav-etl-steps-skip-raw.sh  fordav-etl-steps.sh  fordav-setup-dataset.sh  fordav_bus_etl.py  fordav_bus_etl_job.py  fordav_drive_data.py  fordav_extract_bag.py  fordav_extract_load.py  fordav_extract_tar.py  get-ssm-params.py  glue-etl-job.py  install-eksctl.sh  install-helm.sh  install-kubectl.sh  normalize-semantic-metadata.py  pythonfroms3-ecr-image.sh  pythonfroms3-focal-ecr-image.sh  s3-extract-load.py  s3-extract-tar.py  setup-dev.sh  setup-redshift-db.py  (+1 more)
scripts/catkin_ws/src/fordav/fordav_pointcloud/: CMakeLists.txt  package.xml
(+1 files in other folders)
