<?xml version="1.0"?>
<package format="2">
  <name>fordav_msgs</name>
  <version>1.0.0</version>
  <description>The fordav_msgs package</description>

  <maintainer email="ajayvohr@amazon.com">Ajay Vohra</maintainer>
  <license>MIT</license>
  <author email="ajayvohr@amazon.com">Ajay Vohra</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
